--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,24 @@
 # Build data
 /build/
 
+/.web-server-pid
+/app/config/parameters.yml
+/build/
+/phpunit.xml
+/var/*
+!/var/cache
+/var/cache/*
+!var/cache/.gitkeep
+!/var/logs
+/var/logs/*
+!var/logs/.gitkeep
+!/var/sessions
+/var/sessions/*
+!var/sessions/.gitkeep
+!var/SymfonyRequirements.php
+/vendor/
+/web/bundles/
+
+
 # Backup entities generated with doctrine:generate:entities command
 **/Entity/*~
