--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ app_colocation:
 homepage:
     path:     /
     defaults: { _controller: AppBundle:Default:index }
+
+app_ecocolocation:
+    path:     /ecocolocation
+    defaults: { _controller: AppBundle:Default:ecocolocation }
