nominatim remplace par datagouv

--- a/src/AppBundle/Resources/config/doctrine/Colocation.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Colocation.orm.yml
@@ -70,6 +70,7 @@ AppBundle\Entity\Colocation:
             nullable: true
         photo:
             type: text
+            nullable: true
     lifecycleCallbacks:
         prePersist: [ preUpload ]
         preUpdate: [ preUpload ]
